finished? added checks to make sure the input is less than 28 characters but atleast more than one, added styles for things that are done when clicked and added remove functionality

--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@
       <button class="submit"><li class="fas fa-plus-circle"></li></button>
     </form>
 
-    <div class="item">
-      <p class="item-name"></p>
-      <button class="remove"></button>
-    </div>
+      <ul class="item-list">
+      </ul>
   </section>
 
 </body>
